# ShallowCyan

./: CMakeLists.txt  GREGOIRE_README.md  MAI_README.md  README.md  READMEDuc.md  READMEyonas.md  Zobrist.cpp  bitallmoves.cpp  bitboard.cpp  bitboard.hpp  bithelpers.hpp  bitmoves.cpp  board.cpp  board.hpp  chess  dictionaries.hpp  macro.hpp  magicbitboard.cpp  main.cpp  perft_fen.cpp  piece.cpp  piece.hpp  search.cpp
lichess/: lichess.py
old/: board.cpp  board.hpp  piece.hpp
versions/: shallowcyan_v1depth3  shallowcyan_v1depth4  shallowcyan_v1depth5
